--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gatsby-plugin-sass": "^2.3.12",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-draggable": "^4.4.3"
   },
   "devDependencies": {
     "prettier": "2.1.0"
