--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^2.24.50",
     "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-telemetry": "^1.3.34",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
