--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.24.50",
+    "gatsby": "^2.27.0",
+    "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-telemetry": "^1.3.34",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-draggable": "^4.4.3"
+    "react-draggable": "^4.4.3",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.1.0"
