--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "gatsby": "^2.27.0",
     "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-source-sql": "git+https://github.com/mrfunnyshoes/gatsby-source-sql.git",
     "gatsby-telemetry": "^1.3.34",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-draggable": "^4.4.3",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "prettier": "2.1.0"
