--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
@@ -27,6 +28,7 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "prettier": "2.1.0"
   },
   "repository": {
